--- a/_posts/2025-12-27-clig.md
+++ b/_posts/2025-12-27-clig.md
@@ -5,13 +5,7 @@ categories: [C语言番外]
 tags: [c,cli]
 ---
 
-大约从 1995 年发布的 Windows 95 开始，图形界面化的操作系统才在个人电脑上得到普及，而在这之前，用户使用计算机大都是通过命令行界面（Command Line Interface, CLI）来操作。
+在微博上刷到 onevcat 推荐阅读他最近翻译的《命令行界面设计指南》，我就决定一定要读一遍了。
 
-我本人是在 2002 年上初中后在学校的微机课上首次接触到了计算机，已经忘记当时学校电脑的操作系统是 Windows 98 还是 Windows 2000 了，只记得那时候鼠标还是老式滚珠的，所以我也是从一开始就是使用的图形用户界面。如果听同学说敲过 DOS 命令，会觉得特别厉害。
-
-按照这个发展脉络，我是不需要学习和使用命令行界面的。但是在工作以后，我使用命令行界面的频率却越来越高，每次开机打开的第一个软件就是 macOS 自带的执行命令行的“终端”（Terminal）应用，每次有需要计算机帮我自动处理什么任务时，我也是首先尝试通过编写 Shell 脚本的方式来解决。
-
-命令行是非常强大的，通过命令行可以使用计算机的完整功能。可以这样说，使用图形用户界面（GUI）能实现的功能，通过命令行必然也能实现，但通过命令行可以实现的操作，未必能找到对应的 GUI 软件来完成。
-
-尤其是在 C 语言学习方面，熟悉命令行交互方式更加重要。像我们“C 语言番外”系列文章中很多篇都是和命令行交互息息相关的，比如如何给 main 函数传参、标准输入输出到底是什么、main 函数为什么要返回 0 等等。可以说，如果不熟悉命令行交互，就不会懂 C 语言的设计思想。
+要说电脑上的软件里面，两级分化最严重的，应该就属命令行了。爱的人爱死，每天开机后第一先打开命令行窗口；恨的人也是恨死，哪怕在命令行里只需要一个最简单的命令就能解决的问题，也更愿意花上大半天的时间去找一下是否 GUI 界面的可以替代。所以从这个角度看，程序员分两种，一种是爱用命令行的，另一种就是怕用命令行的。
 
